// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import option Function: errors 1`] = `Array []`;

exports[`import option Function: module (evaluated) 1`] = `
Array [
  Array [
    3,
    "a {
  b: b;
}
",
    "((min-width: 100px)) and (screen and print)",
  ],
  Array [
    2,
    ".test {
  c: c;
}
",
    "screen and print",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css);",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css#hash);",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?#hash);",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?foo=bar#hash);",
  ],
  Array [
    1,
    "@import url(http://example.com/other-style.css);",
    "screen and print",
  ],
  Array [
    1,
    "@import url(//example.com/style.css);",
  ],
  Array [
    4,
    ".query {
  e: e;
}
",
    "",
  ],
  Array [
    5,
    ".other-query {
  f: f;
}
",
    "",
  ],
  Array [
    6,
    ".other-query {
  f: f;
}
",
    "screen and print",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Roboto);",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);",
  ],
  Array [
    7,
    ".relative {
  color: red;
}
",
    "",
  ],
  Array [
    8,
    ".top-relative {
  color: black;
}
",
    "",
  ],
  Array [
    9,
    ".tilde {
  color: yellow;
}
",
    "",
  ],
  Array [
    10,
    ".alias {
  color: red;
}
",
    "",
  ],
  Array [
    11,
    ".background-imported {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
  Array [
    1,
    "@import url(test.css);
@import url('test.css');
@import url(\\"test.css\\");
@IMPORT url(test.css);
@import URL(test.css);
@import url(test.css );
@import url( test.css);
@import url( test.css );
@import url(
  test.css
);
@import url();
@import url('');
@import url(\\"\\");
@import \\"test.css\\";
@import 'test.css';
@import '';
@import \\"\\";
@import \\"   \\";
@import \\"
\\";
@import url();
@import url('');
@import url(\\"\\");
@import url(test.css) screen and print;
@import url(test.css) SCREEN AND PRINT;
@import url(test.css)screen and print;
@import url(test.css)  screen and print;
@import url(~package/test.css);
@import ;
@import foo-bar;
@import-normalize;
@import url('http://') :root {}

.class {
  a: b c d;
}

.foo {
  @import 'path.css';
}

.background {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
]
`;

exports[`import option Function: module 1`] = `
"exports = module.exports = require(\\"../../../src/runtime/api.js\\")(false);
// Imports
var ___CSS_LOADER_AT_RULE_IMPORT_0___ = require(\\"-!../../../src/index.js??ref--4-0!./test-media.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_1___ = require(\\"-!../../../src/index.js??ref--4-0!./test-other.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_8___ = require(\\"-!../../../src/index.js??ref--4-0!./query.css?foo=1&bar=1\\");
var ___CSS_LOADER_AT_RULE_IMPORT_9___ = require(\\"-!../../../src/index.js??ref--4-0!./other-query.css?foo=1&bar=1#hash\\");
var ___CSS_LOADER_AT_RULE_IMPORT_10___ = require(\\"-!../../../src/index.js??ref--4-0!./other-query.css?foo=1&bar=1#hash\\");
var ___CSS_LOADER_AT_RULE_IMPORT_14___ = require(\\"-!../../../src/index.js??ref--4-0!./relative.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_15___ = require(\\"-!../../../src/index.js??ref--4-0!../import/top-relative.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_16___ = require(\\"-!../../../src/index.js??ref--4-0!package/tilde.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_17___ = require(\\"-!../../../src/index.js??ref--4-0!aliasesImport/alias.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_18___ = require(\\"-!../../../src/index.js??ref--4-0!./url.css\\");
var ___CSS_LOADER_GET_URL_IMPORT___ = require(\\"../../../src/runtime/getUrl.js\\");
var ___CSS_LOADER_URL_PURE_IMPORT_0___ = require(\\"./img.png\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___, \\"screen and print\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_1___, \\"(min-width: 100px)\\");
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?foo=bar#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/other-style.css);\\", \\"screen and print\\"]);
exports.push([module.id, \\"@import url(//example.com/style.css);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_8___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_9___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_10___, \\"screen and print\\");
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Roboto);\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_14___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_15___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_16___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_17___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_18___);
var ___CSS_LOADER_URL_IMPORT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_PURE_IMPORT_0___);
// Module
exports.push([module.id, \\"@import url(test.css);\\\\n@import url('test.css');\\\\n@import url(\\\\\\"test.css\\\\\\");\\\\n@IMPORT url(test.css);\\\\n@import URL(test.css);\\\\n@import url(test.css );\\\\n@import url( test.css);\\\\n@import url( test.css );\\\\n@import url(\\\\n  test.css\\\\n);\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import \\\\\\"test.css\\\\\\";\\\\n@import 'test.css';\\\\n@import '';\\\\n@import \\\\\\"\\\\\\";\\\\n@import \\\\\\"   \\\\\\";\\\\n@import \\\\\\"\\\\n\\\\\\";\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import url(test.css) screen and print;\\\\n@import url(test.css) SCREEN AND PRINT;\\\\n@import url(test.css)screen and print;\\\\n@import url(test.css)  screen and print;\\\\n@import url(~package/test.css);\\\\n@import ;\\\\n@import foo-bar;\\\\n@import-normalize;\\\\n@import url('http://') :root {}\\\\n\\\\n.class {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.foo {\\\\n  @import 'path.css';\\\\n}\\\\n\\\\n.background {\\\\n  background: url(\\" + ___CSS_LOADER_URL_IMPORT_0___ + \\");\\\\n}\\\\n\\", \\"\\"]);
"
`;

exports[`import option Function: warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(12:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(13:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(14:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(17:1) Unable to find uri in '@import '''",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(18:1) Unable to find uri in '@import \\"\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(19:1) Unable to find uri in '@import \\"   \\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(20:1) Unable to find uri in '@import \\"
\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(22:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(23:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(24:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(40:1) Unable to find uri in '@import '",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(41:1) Unable to find uri in '@import foo-bar'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(43:1) It looks like you didn't end your @import statement correctly. Child nodes are attached to it.",
]
`;

exports[`import option false: errors 1`] = `Array []`;

exports[`import option false: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "@import url(test.css);
@import url('test.css');
@import url(\\"test.css\\");
@IMPORT url(test.css);
@import URL(test.css);
@import url(test.css );
@import url( test.css);
@import url( test.css );
@import url(
  test.css
);
@import url();
@import url('');
@import url(\\"\\");
@import \\"test.css\\";
@import 'test.css';
@import '';
@import \\"\\";
@import \\"   \\";
@import \\"
\\";
@import url();
@import url('');
@import url(\\"\\");
@import url(test.css) screen and print;
@import url(test.css) SCREEN AND PRINT;
@import url(test.css)screen and print;
@import url(test.css)  screen and print;
@import url(test-media.css) screen and print;
@import url(test-other.css) (min-width: 100px);
@import url(http://example.com/style.css);
@import url(http://example.com/style.css);
@import url(http://example.com/style.css#hash);
@import url(http://example.com/style.css?#hash);
@import url(http://example.com/style.css?foo=bar#hash);
@import url(http://example.com/other-style.css) screen and print;
@import url(http://example.com/other-style.css) screen and print;
@import url(\\"//example.com/style.css\\");
@import url(~package/test.css);
@import ;
@import foo-bar;
@import-normalize;
@import url('http://') :root {}
@import url('query.css?foo=1&bar=1');
@import url('other-query.css?foo=1&bar=1#hash');
@import url('other-query.css?foo=1&bar=1#hash') screen and print;
@import url('https://fonts.googleapis.com/css?family=Roboto');
@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC');
@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto');

.class {
  a: b c d;
}

.foo {
  @import 'path.css';
}

@import url('./relative.css');
@import url('../import/top-relative.css');
@import url(~package/tilde.css);
@import url(~aliasesImport/alias.css);
@import url('./url.css');

.background {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
]
`;

exports[`import option false: module 1`] = `
"exports = module.exports = require(\\"../../../src/runtime/api.js\\")(false);
// Imports
var ___CSS_LOADER_GET_URL_IMPORT___ = require(\\"../../../src/runtime/getUrl.js\\");
var ___CSS_LOADER_URL_PURE_IMPORT_0___ = require(\\"./img.png\\");
var ___CSS_LOADER_URL_IMPORT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_PURE_IMPORT_0___);
// Module
exports.push([module.id, \\"@import url(test.css);\\\\n@import url('test.css');\\\\n@import url(\\\\\\"test.css\\\\\\");\\\\n@IMPORT url(test.css);\\\\n@import URL(test.css);\\\\n@import url(test.css );\\\\n@import url( test.css);\\\\n@import url( test.css );\\\\n@import url(\\\\n  test.css\\\\n);\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import \\\\\\"test.css\\\\\\";\\\\n@import 'test.css';\\\\n@import '';\\\\n@import \\\\\\"\\\\\\";\\\\n@import \\\\\\"   \\\\\\";\\\\n@import \\\\\\"\\\\n\\\\\\";\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import url(test.css) screen and print;\\\\n@import url(test.css) SCREEN AND PRINT;\\\\n@import url(test.css)screen and print;\\\\n@import url(test.css)  screen and print;\\\\n@import url(test-media.css) screen and print;\\\\n@import url(test-other.css) (min-width: 100px);\\\\n@import url(http://example.com/style.css);\\\\n@import url(http://example.com/style.css);\\\\n@import url(http://example.com/style.css#hash);\\\\n@import url(http://example.com/style.css?#hash);\\\\n@import url(http://example.com/style.css?foo=bar#hash);\\\\n@import url(http://example.com/other-style.css) screen and print;\\\\n@import url(http://example.com/other-style.css) screen and print;\\\\n@import url(\\\\\\"//example.com/style.css\\\\\\");\\\\n@import url(~package/test.css);\\\\n@import ;\\\\n@import foo-bar;\\\\n@import-normalize;\\\\n@import url('http://') :root {}\\\\n@import url('query.css?foo=1&bar=1');\\\\n@import url('other-query.css?foo=1&bar=1#hash');\\\\n@import url('other-query.css?foo=1&bar=1#hash') screen and print;\\\\n@import url('https://fonts.googleapis.com/css?family=Roboto');\\\\n@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC');\\\\n@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto');\\\\n\\\\n.class {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.foo {\\\\n  @import 'path.css';\\\\n}\\\\n\\\\n@import url('./relative.css');\\\\n@import url('../import/top-relative.css');\\\\n@import url(~package/tilde.css);\\\\n@import url(~aliasesImport/alias.css);\\\\n@import url('./url.css');\\\\n\\\\n.background {\\\\n  background: url(\\" + ___CSS_LOADER_URL_IMPORT_0___ + \\");\\\\n}\\\\n\\", \\"\\"]);
"
`;

exports[`import option false: warnings 1`] = `Array []`;

exports[`import option true: errors 1`] = `Array []`;

exports[`import option true: module (evaluated) 1`] = `
Array [
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    3,
    ".test {
  a: a;
}
",
    "screen and print",
  ],
  Array [
    5,
    "a {
  b: b;
}
",
    "((min-width: 100px)) and (screen and print)",
  ],
  Array [
    4,
    ".test {
  c: c;
}
",
    "screen and print",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css);",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css#hash);",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?#hash);",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?foo=bar#hash);",
  ],
  Array [
    1,
    "@import url(http://example.com/other-style.css);",
    "screen and print",
  ],
  Array [
    1,
    "@import url(//example.com/style.css);",
  ],
  Array [
    6,
    ".test {
  d: d
}
",
    "",
  ],
  Array [
    7,
    ".query {
  e: e;
}
",
    "",
  ],
  Array [
    8,
    ".other-query {
  f: f;
}
",
    "",
  ],
  Array [
    9,
    ".other-query {
  f: f;
}
",
    "screen and print",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Roboto);",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);",
  ],
  Array [
    10,
    ".relative {
  color: red;
}
",
    "",
  ],
  Array [
    11,
    ".top-relative {
  color: black;
}
",
    "",
  ],
  Array [
    12,
    ".tilde {
  color: yellow;
}
",
    "",
  ],
  Array [
    13,
    ".alias {
  color: red;
}
",
    "",
  ],
  Array [
    14,
    ".background-imported {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
  Array [
    1,
    "@import url();
@import url('');
@import url(\\"\\");
@import '';
@import \\"\\";
@import \\"   \\";
@import \\"
\\";
@import url();
@import url('');
@import url(\\"\\");
@import ;
@import foo-bar;
@import-normalize;
@import url('http://') :root {}

.class {
  a: b c d;
}

.foo {
  @import 'path.css';
}

.background {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
]
`;

exports[`import option true: module 1`] = `
"exports = module.exports = require(\\"../../../src/runtime/api.js\\")(false);
// Imports
var ___CSS_LOADER_AT_RULE_IMPORT_0___ = require(\\"-!../../../src/index.js??ref--4-0!./test.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_1___ = require(\\"-!../../../src/index.js??ref--4-0!./test.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_2___ = require(\\"-!../../../src/index.js??ref--4-0!./test-media.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_3___ = require(\\"-!../../../src/index.js??ref--4-0!./test-other.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_10___ = require(\\"-!../../../src/index.js??ref--4-0!package/test.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_11___ = require(\\"-!../../../src/index.js??ref--4-0!./query.css?foo=1&bar=1\\");
var ___CSS_LOADER_AT_RULE_IMPORT_12___ = require(\\"-!../../../src/index.js??ref--4-0!./other-query.css?foo=1&bar=1#hash\\");
var ___CSS_LOADER_AT_RULE_IMPORT_13___ = require(\\"-!../../../src/index.js??ref--4-0!./other-query.css?foo=1&bar=1#hash\\");
var ___CSS_LOADER_AT_RULE_IMPORT_17___ = require(\\"-!../../../src/index.js??ref--4-0!./relative.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_18___ = require(\\"-!../../../src/index.js??ref--4-0!../import/top-relative.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_19___ = require(\\"-!../../../src/index.js??ref--4-0!package/tilde.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_20___ = require(\\"-!../../../src/index.js??ref--4-0!aliasesImport/alias.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_21___ = require(\\"-!../../../src/index.js??ref--4-0!./url.css\\");
var ___CSS_LOADER_GET_URL_IMPORT___ = require(\\"../../../src/runtime/getUrl.js\\");
var ___CSS_LOADER_URL_PURE_IMPORT_0___ = require(\\"./img.png\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_1___, \\"screen and print\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_2___, \\"screen and print\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_3___, \\"(min-width: 100px)\\");
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?foo=bar#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/other-style.css);\\", \\"screen and print\\"]);
exports.push([module.id, \\"@import url(//example.com/style.css);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_10___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_11___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_13___, \\"screen and print\\");
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Roboto);\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_17___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_18___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_19___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_20___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_21___);
var ___CSS_LOADER_URL_IMPORT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_PURE_IMPORT_0___);
// Module
exports.push([module.id, \\"@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import '';\\\\n@import \\\\\\"\\\\\\";\\\\n@import \\\\\\"   \\\\\\";\\\\n@import \\\\\\"\\\\n\\\\\\";\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import ;\\\\n@import foo-bar;\\\\n@import-normalize;\\\\n@import url('http://') :root {}\\\\n\\\\n.class {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.foo {\\\\n  @import 'path.css';\\\\n}\\\\n\\\\n.background {\\\\n  background: url(\\" + ___CSS_LOADER_URL_IMPORT_0___ + \\");\\\\n}\\\\n\\", \\"\\"]);
"
`;

exports[`import option true: warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(12:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(13:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(14:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(17:1) Unable to find uri in '@import '''",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(18:1) Unable to find uri in '@import \\"\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(19:1) Unable to find uri in '@import \\"   \\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(20:1) Unable to find uri in '@import \\"
\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(22:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(23:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(24:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(40:1) Unable to find uri in '@import '",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(41:1) Unable to find uri in '@import foo-bar'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(43:1) It looks like you didn't end your @import statement correctly. Child nodes are attached to it.",
]
`;
